--- a/Projects/index.html
+++ b/Projects/index.html
@@ -1,46 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Drink Water</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Drink Water Tracker</title>
+  <link rel="stylesheet" href="style.css" />
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
-
 <body>
-    <h1>Drink Water</h1>
-    <h3>Goal: 3 Liters</h3>
+  <button id="toggle-mode">🌙 Dark Mode</button>
+  <h1>Drink Water</h1>
 
-    <div class="cup">
-        <div class="remained" id="remained">
-            <span id="liters"></span>
-            <small>Remained</small>
-        </div>
+  <h3 id="goalSection" style="display: none;">
+    Goal: <span id="goalDisplay"></span> Liters
+  </h3>
+  <input type="number" id="customGoal" placeholder="Set Goal (Liters)">
+  <button id="setGoal">Set</button>
 
-        <div class="percentage" id="percentage"></div>
+  <div class="cup">
+    <div class="remained" id="remained">
+      <span id="liters"></span>
+      <small>Remained</small>
     </div>
+    <div class="percentage" id="percentage"></div>
+  </div>
 
-    <p class="text">Select how many glasses of water that you have drank</p>
+  <p class="text">Select how many glasses of water you've drunk</p>
+  <p id="motivation" class="motivation-text"></p>
+  <div class="cups" id="cupsContainer"></div>
 
-    <div class="cups">
-        <div class="cup cup-small">250 ml</div>
-        <div class="cup cup-small">250 ml</div>
-        <div class="cup cup-small">250 ml</div>
-        <div class="cup cup-small">250 ml</div>
-        <div class="cup cup-small">250 ml</div>
-        <div class="cup cup-small">250 ml</div>
-        <div class="cup cup-small">250 ml</div>
-        <div class="cup cup-small">250 ml</div>
-        <div class="cup cup-small">250 ml</div>
-        <div class="cup cup-small">250 ml</div>
-        <div class="cup cup-small">250 ml</div>
-        <div class="cup cup-small">250 ml</div>
+  <h3>Weekly Progress</h3>
+  <canvas id="weeklyChart" width="400" height="200"></canvas>
 
-
-    </div>
-
-    <script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
-
 </html>
